# so-vits-svc-5.0

./: .gitignore  Dockerfile  READHAN.md  docker-compose.yaml  pyproject.toml  setup.py  svc_inference.py  svc_inference.sh  svc_inference_content_aug.py  svc_inference_content_aug.sh  svc_inference_content_aug_from_wav.sh  svc_trainer.py  svc_trainer_content_aug.py
configs/: base.yaml
files/: shuffle.py
prepare/: preprocess_a.py  preprocess_crepe.py  preprocess_hubert.py  preprocess_ppg.py  preprocess_spec.py  preprocess_train.py  preprocess_zzz.py
tmp/: wasabi.sh  zstd.sh
vits/: data_utils.py  data_utils_content_aug.py  losses.py  models.py  models_content_aug.py  utils.py
vits_decoder/: discriminator.py  generator.py  mpd.py  mrd.py  msd.py  nsf.py
vits_extend/: dataloader.py  dataloader_content_aug.py  stft_loss.py  train.py  train_content_aug.py  validation.py  writer.py
